[tool.poetry]
name = "neuralqueue"
version = "0.1.0"
description = "A distributed task queue with learned components"
authors = ["Excel Chukwu <excel.chukwu1.0@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.12.0"
pytest = "^8.3.3"
flake8 = "^7.1.1"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.12"  # Adjust to your version
strict = true  # Enables strict type checking
ignore_missing_imports = true  # Prevents errors on untyped imports
disallow_untyped_calls = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
